Add stacktrace options